# thrift-demo

./: README.md  go.mod  go.sum
cmd/client/cpp_client/: CMakeLists.txt  client.cpp
cmd/client/go_client/: main.go
cmd/server/: main.go
gen-cpp/: timeRPC_types.h  timeServe.cpp  timeServe.h  timeServe_server.skeleton.cpp.bak
gen-go/timerpc/: GoUnusedProtection__.go  timeRPC-consts.go  timeRPC.go
gen-go/timerpc/time_serve-remote/: time_serve-remote.go
internal/service/: greeter_service.go  student_service.go  time_service.go
rpc/: thrift_service.go
thrift/: person.thrift  timeRPC.thrift
